@@ -1,3 +1,6 @@
+20220623:
+ * important update of versions logic
+
 20220621:
  * added support for --quiet
  * changed CM_NEED_VERSION to CM_VERSION
